Mobile header fixed

--- a/index.html
+++ b/index.html
@@ -29,10 +29,33 @@
     <header id="header">
       <span><img src="eco-logo.jpg" alt="logo" id="header-img" /> EcoWave</span>
       <nav id="nav-bar">
-        <a href="#whyecowave" class="nav-link">Varför EcoWave?</a
-        ><a href="#products" class="nav-link">Produkter</a
-        ><a href="#testimonials" class="nav-link">Omdömen</a>
+        <ul class="nav-menu">
+          <li class="nav-link">
+            <a href="#whyecowave">Varför EcoWave?</a>
+          </li>
+          <li class="nav-link">
+            <a href="#products">Produkter</a>
+          </li>
+          <li class="nav-link">
+            <a href="#testimonials">Omdömen</a>
+          </li>
+        </ul>
       </nav>
+
+      <!-- <nav>
+        <input type="checkbox" id="nav-checkbox" class="nav-checkbox" />
+        <label for="nav-checkbox" class="nav-toggle">
+          <i class="fa-solid fa-bars fa-xl menu"></i>
+          <i class="fa-solid fa-xmark fa-2xl close"></i>
+        </label>
+        <ul class="nav-menu flex-column">
+          <li><img src="assets/LOGO.webp" alt="logotyp" class="logo" /></li>
+          <li class="nav-link"><a href="index.html">Hem</a></li>
+          <li class="nav-link"><a href="portfolio.html">Portfolio</a></li>
+          <li class="nav-link"><a href="about.html">Om mig</a></li>
+          <li class="nav-link"><a href="contact.html">Kontakt</a></li>
+        </ul>
+      </nav> -->
     </header>
     <main>
       <div class="hero">
